Agregado formularios de registro asi como el partial de login y de registro

--- a/app/views/help.html
+++ b/app/views/help.html
@@ -1,8 +1,8 @@
-		<p>This is the about view.</p>
+		<p>This is the help view.</p>
 <md-card>
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline">Pagina de About us</span>
+            <span class="md-headline">Aqui va la pagina de help</span>
             <span class="md-subhead">Large</span>
         </md-card-title-text>
     <md-card-title-media>
