Adicionada la nueva plantilla del fronted, hay que editarla to

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,8 @@
-<div layout="column">
-  <div flex>
-    
+<div layout="column" layout-fill >
+  <div flex class="first_container" >
+    primera 
   </div>
   <div flex>
-    
+    seguna
   </div>
 </div>
