--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -1,6 +1,6 @@
 .first_container{
 	
-	background: url('../images/prueba.jpg') no-repeat center center fixed;
+	/*background: url('../images/prueba.jpg') no-repeat center center fixed;*/
 	overflow: hidden;
 
 }
@@ -8,9 +8,9 @@
     position: relative;
     width:100%;
     height:0; /* Simple trick to keep a 16:9 ratio on your background image (height=0;padding-bottom=56.25%) */
-    padding-bottom: 56.25%;
+    padding-bottom: 45.25%;
     overflow:hidden;
-    background-size:160%; /* You can override this value if your picture has a weird ratio */
+    background-size:135%; /* You can override this value if your picture has a weird ratio */
     background-position:50% 50%;
 }
 
@@ -44,7 +44,7 @@ i {
 }
 
 .md-tools {
-  width: 40px;
+  /*width: 60px;*/
 }
 
 .muted {
