--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,87 @@
-<div layout="column" layout-fill >
-  <div flex class="first_container" >
-    primera 
-  </div>
-  <div flex>
-    seguna
-  </div>
-</div>
+<md-list>
+          <md-item>
+            <md-item-content>
+              <div class="md-tile-left">
+                <i class="ion-android-call"></i>
+              </div>
+              <div class="md-tile-content">
+                <i class="ion-android-hangout" style="float:right;margin-right:18px;margin-top:8px;color:#aaa;"></i>
+                <h3 style="padding-top:8px;">(950)555-1234</h3>
+                <p class="muted">
+                  Mobile
+                </p>
+              </div>
+            </md-item-content>
+          </md-item>
+          <md-item>
+            <md-item-content>
+              <div class="md-tile-left">
+                  
+              </div>
+              <div class="md-tile-content">
+                <i class="ion-android-hangout" style="float:right;margin-right:18px;color:#aaa;"></i>
+                <h3>(333)254-7851</h3>
+                <p class="muted">
+                  Work
+                </p>
+              </div>
+            </md-item-content>
+          </md-item>
+          
+          <md-divider></md-divider>
+          <md-item>
+            <md-item-content>
+              <div class="md-tile-left">
+                <i class="ion-android-mail"></i>
+              </div>
+              <div class="md-tile-content" >
+                <h3 style="padding-top:8px;">katyperryisme@mail.com</h3>
+                <p class="muted">
+                  Personal
+                </p>
+              </div>
+            </md-item-content>
+          </md-item>
+          <md-item>
+            <md-item-content>
+              <div class="md-tile-left">
+                  
+              </div>
+              <div class="md-tile-content">
+                <h3>katykate@mail.com</h3>
+                <p class="muted">
+                  Work
+                </p>
+              </div>
+            </md-item-content>
+          </md-item>
+          <md-divider></md-divider>
+          
+          <md-item>
+            <md-item-content>
+              <div class="md-tile-left">
+                <i class="ion-android-pin"></i>
+              </div>
+              <div class="md-tile-content" >
+                <h3 style="padding-top:8px;">2000 SW 1st Ave</h3>
+                <h3>San Fransisco, CA 94112</h3>
+                <p class="muted">Home</p>
+              </div>
+            </md-item-content>
+          </md-item>
+          <md-item>
+            <md-item-content>
+              <div class="md-tile-left">
+                  
+              </div>
+              <div class="md-tile-content">
+                <h3>1600 Amphitheatre Pkwy</h3>
+                <h3>Mountain View, CA 94043</h3>
+                <p class="muted">Work</p>
+              </div>
+            </md-item-content>
+          </md-item>
+          <md-divider></md-divider>
+          
+          
+        </md-list>
